[project]
name = "hoymiles-wifi-exporter"
version = "1.0.0"
description = "Prometheus exporter for Hoymiles WiFi inverters"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "hoymiles-wifi>=0.5.5",
    "prometheus-client>=0.23.1",
]

[project.scripts]
hoymiles-wifi-exporter = "main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.semantic_release]
version_source = "tag"
tag_format = "v{version}"
commit = false

[tool.semantic_release.remote]
type = "github"
