[build-system]
requires = ["setuptools>=80.10.2", "setuptools-scm>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hoymiles-wifi-exporter"
dynamic = ["version"]
description = "Prometheus exporter for Hoymiles WiFi inverters"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "hoymiles-wifi>=0.5.5",
    "prometheus-client>=0.24.1",
]

[project.scripts]
hoymiles-wifi-exporter = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "metrics", "collector", "version"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.10",
]

[tool.setuptools_scm]
# Dynamic versioning from git tags

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.semantic_release]
version_source = "tag"
tag_format = "v{version}"
commit = false

[tool.semantic_release.remote]
type = "github"
